--- a/.env
+++ b/.env
@@ -25,8 +25,9 @@ APP_SECRET=3c1865563372bb580785b90db649ae91
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL=mysql://root:''@127.0.0.1:3307/test-capturama?serverVersion=10.11.2-MariaDB&charset=utf8mb4
+# DATABASE_URL=mysql://root:''@127.0.0.1:3306/test-capturama
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
